fdo#44611 writer: paragraph background color picker with split button